--- a/style.css
+++ b/style.css
@@ -8,11 +8,18 @@
     height: 100vh;
    
 }
+@media only screen and (min-width: 600px){
+    .wraper {
+        background: url(home.jpg) no-repeat;
+        background-size: cover;
+        
+    }
+}
 .navbar {
     height: 80px;
     width: 100%;
     background-color: lightgray;
-    
+
 }
 .navbar ul {
     float: right;
@@ -50,6 +57,25 @@
     user-select: none;
     align-items: center;
 }
+.navbar h3 {
+    
+    padding-left: 400px;
+    
+}
+.right-1 {
+   padding-left: 800px;
+   
+}
+.right-1 button {
+    padding: 15px 15px;
+    background-color: green;
+    border: none;
+}
+.right-1 button:hover {
+    background-color:black;
+    cursor: pointer;
+    color: white;
+}
 
 .center h2 {
     color: green;
@@ -79,6 +105,11 @@
     outline: none;
     cursor: pointer;
    
+}
+.buttons button:hover {
+    background-color: black;
+    cursor: pointer;
+    color: white;
 }
 section {
     width: 100%;
@@ -121,6 +152,11 @@ background-color: white;
     background-color: green;
     color: white;
 }
+.about-info button:hover {
+    background-color: black;
+    cursor: pointer;
+    color: white;
+}
 .info-box {
     display: flex;
 }
@@ -131,47 +167,72 @@ background-color: white;
 
 
 .info-2 {
-    box-shadow: inset 0px 0px  7px 3px #999;
+    border: 1px white;
+    box-shadow: 5px 10px 8px 10px lightgrey;
     width: 150px;
     padding: 50px;
     margin: 20px;
 }
 .info-2:hover {
     background-color: green;
+    animation-name: grow;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
 }
 .info-21 {
-    box-shadow: inset 0px 0px  7px 3px #999;
+    border: 1px white;
+    box-shadow: 5px 10px 8px 10px lightgrey;
     width: 150px;
     padding: 50px;
     margin: 20px;
 }
 .info-21:hover {
     background-color: green;
+    animation-name: grow;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
 }
 
-.info-2 h3 {
-    font-weight: lighter;
+.info-2 h4 {
+   color: black;
     
 
 }
 .info-3 {
-    box-shadow: inset 0px 0px  7px 3px #999;
+    border: 1px white;
+    box-shadow: 5px 10px 8px 10px lightgrey;
     width: 150px;
     padding: 50px;
     margin: 20px;
     font-weight: lighter;
+
+}
+@keyframes grow{
+    from {
+        margin: 20px;
+    }
+    to {
+        margin: 5px;
+    }
 }
 .info-3:hover {
     background-color: green;
+    animation-name: grow;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
 }
 .info-31 {
-    box-shadow: inset 0px 0px  7px 3px #999;
+    border: 1px white;
+    box-shadow: 5px 10px 8px 10px lightgrey;
     width: 150px;
     padding: 50px;
     margin: 20px;
 }
 .info-31:hover {
     background-color: green;
+    animation-name: grow;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
 }
 .photo-invest {
     display: flex;
@@ -180,20 +241,32 @@ background-color: white;
 }
 
 .invest1 {
-    box-shadow: inset 0px 0px  7px 3px #999;
+    border: 1px white;
+    box-shadow: 5px 10px 8px 10px lightgrey;
     width: 150px;
     padding: 40px;
     margin: 20px;
     font-weight: lighter;
   
 }
+.invest1:hover {
+    animation-name: grow;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
 .invest2 {
-    box-shadow: inset 0px 0px  7px 3px #999;
+    border: 1px white;
+    box-shadow: 5px 10px 8px 10px lightgrey;
     width: 150px;
     padding: 40px;
     margin: 20px;
     font-weight: lighter;
   
+}
+.invest2:hover {
+    animation-name: grow;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
 }
 .image {
     width: 160px;
@@ -222,10 +295,15 @@ background-color: white;
     margin-left: 20px;
     margin-top: 20px;
 }
+.service-data button:hover {
+    background-color: green;
+    color: white;
+    cursor: pointer;
+}
 .man {
     font-weight: lighter;
     display: flex;
-    margin-top: 100px;
+    
 }
 .man h1{
     margin-left: 100px;
@@ -233,12 +311,13 @@ background-color: white;
     font-weight: lighter;
     font-family: 'Times New Roman', Times, serif;
     font-size: 30px;
-    margin-right: 400px;
+    margin-right: 150px;
+    
 }
 .man1 {
     width: 200px;
     height: 300px;
-    margin-right: 150px;
+    margin-right: 300px;
 }
 .fa {
     padding: 10px;
@@ -258,25 +337,73 @@ background-color: white;
       width: 100%;
       display: flex;
       margin-bottom: 5px;
+      
   }
   .contact-1 {
-      padding-left: 30px;
+      padding-left: 100px;
+      margin-top: 100px;
   }
   .contact-2 {
       padding-left: 150px;
+      margin-top: 100px;
   }
   .contact-2 li {
       list-style: none;
   }
   .contact-3 {
       padding-left: 80px;
+      margin-top: 100px;
   }
   .contact-3 li {
       list-style: none;
   }
   .contact-4 {
     padding-left: 120px;
+    margin-top: 100px;
 }
 .contact-4 li {
     list-style: none;
 }
+
+input[type=text], select, textarea {
+    width: 100%; 
+    padding: 12px;  
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box;  
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical; 
+  }
+  
+  
+  input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  
+  .container {
+    box-shadow: 10px 10px 5px 5px lightgray;
+    margin-left: 90px;
+    margin-right: 90px;
+    margin-top: 50px;
+    
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+  #messgae {
+      background-color: white;
+  }
+  
+  
